Add Lecture 2 on randomization

--- a/lectures/po_dags.tex
+++ b/lectures/po_dags.tex
@@ -796,7 +796,7 @@ the data''\\
 \end{columns}
 \end{frame}
 
-\begin{frame}{Strutural equations and causal effects (Haile 2020)}
+\begin{frame}{Structural equations and causal effects (Haile 2020)}
 \begin{columns}[T] % align columns
   \begin{column}{.7\textwidth}
     \begin{wideitemize}
