--- a/lectures/propensity_scores.tex
+++ b/lectures/propensity_scores.tex
@@ -189,10 +189,10 @@
   \item For today, propensity scores. The end goal: 
     \begin{itemize}
     \item Have a framework for discussing subpopulations
-      being treated,
+      being treated
     \item A way to link to an underlying economic model
     \end{itemize}
-  \item This will provide a lot of structure for us later
+  \item This will provide structure for us later
   \end{wideitemize}
 \end{frame}
 
@@ -486,8 +486,6 @@
     \item The punchline is that when we start having to worry about
       the pscore (i.e. in worlds with many covariates and/or
       continuous covariates), life gets complicated.
-    \item Key point for us: thinking about pscores is still
-      \emph{intuitively} valuable
     \item As we will discuss below, forces us to think about overlap of covariates and balance
       \begin{itemize}
       \item E.g. comparability between treated and untreated groups
